fix visual bug with buttons and add spacing

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -35,9 +35,7 @@
     }
 
     button {
-      background: none;
-      border: none;
-      outline: none;
+      margin-left: $small-spacing;
     }
   }
 
